--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -6,9 +6,12 @@
 
 set(CREATE_PYTHON FALSE CACHE BOOL "Do you want to create the Python interface")
 set(CREATE_LUA FALSE CACHE BOOL "Do you want to create the Lua interface")
+set(CREATE_MATLAB FALSE CACHE BOOL "Do you want to create the MATLAB Interface")
+set(GENERATE_MATLAB FALSE CACHE BOOL "Enable if you have the experimental version of SWIG necessary for generating the Matlab wrapper")
 
 find_package(SWIG REQUIRED)
 include(${SWIG_USE_FILE})
+message(STATUS "SWIG_USE_FILE :" ${SWIG_USE_FILE})
 
 set_source_files_properties(iDynTree.i PROPERTIES CPLUSPLUS ON)
 
@@ -17,16 +20,11 @@ get_property(IDYNTREE_LIBRARIES GLOBAL PROPERTY ${VARS_PREFIX}_TARGETS)
 
 include_directories(${IDYNTREE_INCLUDE_DIRS})
 link_libraries(${IDYNTREE_LIBRARIES})
-message(STATUS "Bindings libraries: " ${IDYNTREE_LIBRARIES})
 
 if(CREATE_LUA)
-  set(CMAKE_SWIG_FLAGS "-Wall;-module;iDynTree")
-  find_package(Lua51 REQUIRED)
-  set(target_name iDynTree_lua)
-  include_directories(${LUA_INCLUDE_DIR})
-  swig_add_module(${target_name} lua iDynTree.i)
-  swig_link_libraries(${target_name} ${LUA_LIBRARY})
-  set_target_properties(${target_name} PROPERTIES PREFIX "")
-  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME "iDynTree")
-  set_target_properties(${target_name} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/lua)
+    add_subdirectory(lua)
 endif(CREATE_LUA)
+
+if(CREATE_MATLAB)
+    add_subdirectory(matlab)
+endif(CREATE_MATLAB)
