--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: bash
       run: |
-        # Install dependencies that are not included in the robotology-superbuild-dependencies-vcpkg archive
+        # Install dependencies that are not included in the robotology-superbuild-dependencies-vcpkg archive (for now)
         ${VCPKG_INSTALLATION_ROOT}/vcpkg.exe install assimp:x64-windows
 
     - name: Dependencies [macOS]
